@startuml Informationsmodell: AM-Modell
!theme plain
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam roundcorner 8
skinparam objectAttributeIconSize 0

skinparam class {
    BackgroundColor #EEF4FB
    BorderColor #4A90D9
    ArrowColor #333
    HeaderBackgroundColor #4A90D9
    HeaderFontColor white
}

skinparam file {
    BackgroundColor #LightYellow
}

skinparam folder {
    BackgroundColor #LightYellow
}

' ── Objekte ───────────────────────────────────────────────────────────────────
file dev_spacy {

}

file train_spacy {
    
}

folder model_best {

}

file ohi_txt {

}

class Training {

}

class Preprocessor {
    + input_dir : Path
    + output_train : Path
    + output_dev : Path
    + essays : List[DARIUSEssay]
}

class DARIUSEssay {
    + filepath : Path
    + sentences : List[Sentence]
}

class Sentence {
    + text : str
    + tokens : List[str]
    + offsets : List[Tuple[int,int]]
    + tap : TAPAnnotation
}

class TAPAnnotation {
    + label : str
    + arg_id : str
}

file model_cfg {
}

class AMModel {
    + model_path : Path
    + labels : List[str]
}

class Span {
    + start : int
    + end : int
    + label : str
    + text : str
}

class ClassifiedText {
    + text : str
    + spans : List[Span]
}


' ── Beziehungen ────────────────────────────────────────────────────────────────
Preprocessor "1" o-- "1..*" DARIUSEssay : hält Liste
Preprocessor "1" --> "1" dev_spacy : erzeugt
Preprocessor "1" --> "1" train_spacy : erzeugt
 
Training "1" -up-> "1" train_spacy : nutzt
Training "1" -up-> "1" dev_spacy : nutzt
Training "1" -down-> "1" model_best : erzeugt
model_cfg "1" -up-> "1" Training : konfiguriert

DARIUSEssay  "1" *-- "1..*" Sentence      : besteht aus
Sentence     "1" *-- "0..*" TAPAnnotation : trägt

AMModel "1" -down-> "1..*" ClassifiedText : erzeugt
ClassifiedText    "0..*" o-- "1" Span : enthält Liste
AMModel "1" -down-> "1" model_best : ruft auf
AMModel "1" -up-> "1..*" ohi_txt : liest ein


@enduml
